--- a/views/admin/viewUser.hbs
+++ b/views/admin/viewUser.hbs
@@ -128,7 +128,7 @@
 							<td>
 								<img style="width: 70px ;" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
 								<a href="#" class="user-link">{{this.fName}}</a>
-								<span class="user-subhead">Admin</span>
+								<span class="user-subhead"></span>
 							</td>
 							<td>
 								{{this.create}}
