--- a/views/partials/admin-Dashbord.hbs
+++ b/views/partials/admin-Dashbord.hbs
@@ -235,16 +235,16 @@
     </ul>
   </li>
   <!-- Components -->
-  <li class="menu-header small text-uppercase"><span class="menu-header-text">Components</span></li>
+  {{!-- <li class="menu-header small text-uppercase"><span class="menu-header-text">Components</span></li> --}}
   <!-- Cards -->
-  <li class="menu-item">
+  {{!-- <li class="menu-item">
     <a href="cards-basic.html" class="menu-link">
       <i class="menu-icon tf-icons bx bx-collection"></i>
       <div data-i18n="Basic">Cards</div>
     </a>
-  </li>
+  </li> --}}
   <!-- User interface -->
-  <li class="menu-item">
+  {{!-- <li class="menu-item">
     <a href="javascript:void(0)" class="menu-link menu-toggle">
       <i class="menu-icon tf-icons bx bx-box"></i>
       <div data-i18n="User interface">User interface</div>
@@ -346,10 +346,10 @@
         </a>
       </li>
     </ul>
-  </li>
+  </li> --}}
 
   <!-- Extended components -->
-  <li class="menu-item">
+  {{!-- <li class="menu-item">
     <a href="javascript:void(0)" class="menu-link menu-toggle">
       <i class="menu-icon tf-icons bx bx-copy"></i>
       <div data-i18n="Extended UI">Extended UI</div>
@@ -366,14 +366,14 @@
         </a>
       </li>
     </ul>
-  </li>
+  </li> --}}
 
-  <li class="menu-item">
+  {{!-- <li class="menu-item">
     <a href="icons-boxicons.html" class="menu-link">
       <i class="menu-icon tf-icons bx bx-crown"></i>
       <div data-i18n="Boxicons">Boxicons</div>
     </a>
-  </li>
+  </li> --}}
 
   <!-- Forms & Tables -->
   <li class="menu-header small text-uppercase"><span class="menu-header-text">view &amp; Management</span></li>
@@ -422,7 +422,7 @@
     </a>
   </li>
   <!-- Misc -->
-  <li class="menu-header small text-uppercase"><span class="menu-header-text">Misc</span></li>
+  {{!-- <li class="menu-header small text-uppercase"><span class="menu-header-text">Misc</span></li>
   <li class="menu-item">
     <a
       href="https://github.com/themeselection/sneat-html-admin-template-free/issues"
@@ -432,8 +432,8 @@
       <i class="menu-icon tf-icons bx bx-support"></i>
       <div data-i18n="Support">Support</div>
     </a>
-  </li>
-  <li class="menu-item">
+  </li> --}}
+  {{!-- <li class="menu-item">
     <a
       href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
       target="_blank"
@@ -442,7 +442,7 @@
       <i class="menu-icon tf-icons bx bx-file"></i>
       <div data-i18n="Documentation">Documentation</div>
     </a>
-  </li>
+  </li> --}}
 </ul>
 </aside>
 <div class="layout-page">
@@ -538,7 +538,7 @@
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="auth-login-basic.html">
+                      <a class="dropdown-item" href="/logout">
                         <i class="bx bx-power-off me-2"></i>
                         <span class="align-middle">Log Out</span>
                       </a>
