--- a/views/user/productZoom.hbs
+++ b/views/user/productZoom.hbs
@@ -16,31 +16,26 @@
         <div class = "product-imgs">
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "/uploads/{{data.images.[0].img1}}" alt = "shoe image">
-              <img src = "/uploads/{{this.images.[0].img1}}" alt = "shoe image">
-              <img src = "/uploads/{{data.images.[0].img1}}" alt = "shoe image">
-              <img src = "/uploads/{{data.images.[0].img1}}" alt = "shoe image">
+              <img src = "/uploads/{{data.images.[0].img1}}" alt = "image">
+              <img src = "/uploads/{{data.images.[0].img2}}" alt = "image">
+              <img src = "/uploads/{{data.images.[0].img3}}" alt = "image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "1">
-                <img src = "/uploads/{{data.images.[0].img1}}" alt = "shoe image">
+                <img src = "/uploads/{{data.images.[0].img1}}" alt = "image">
               </a>
             </div>
-            <div class = "img-item">
-              <a href = "#" data-id = "2">
-                <img src = "/uploads/{{data.images.[0].img1}}" alt = "shoe image">
-              </a>
-            </div>
+           
             <div class = "img-item">
               <a href = "#" data-id = "3">
-                <img src = "/uploads/{{data.images.[0].img1}}" alt = "shoe image">
+                <img src = "/uploads/{{data.images.[0].img2}}" alt = "image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "4">
-                <img src = "/uploads/{{data.images.[0].img1}}" alt = "shoe image">
+                <img src = "/uploads/{{data.images.[0].img3}}" alt = "image">
               </a>
             </div>
           </div>
